# GitHub-Repository-Research-Tool

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  README_PRECOMMIT.md  docker-compose.local.yaml  docker-compose.yaml  pyproject.toml  requirements.txt
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: copilot.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
.specify/workflows/: workflow-registry.json
alembic/: env.py
alembic/versions/: 202604190101_create_research_tables.py
app/: router.py
app/research/: __init__.py  dependencies.py
app/research/adapters/: __init__.py  github_adapter.py  llm_adapter.py  redis_adapter.py  sqs_adapter.py
app/research/crud/: __init__.py  crud_research.py
app/research/model/: __init__.py  research.py
app/research/ports/: __init__.py
app/research/schema/: __init__.py
app/research/service/: __init__.py  context_sanitizer.py  orchestration.py  pipeline.py  report_renderer.py  url_validator.py
app/research/templates/: research.html
app/research/worker/: __init__.py  sqs_worker.py
common/: log.py
common/exception/: errors.py
core/: conf.py  registrar.py
database/: db.py  redis.py
scripts/: base_env.sh  celery-start.sh  export.sh
specs/001-github-repo-research/: data-model.md  design-notes.md  how-it-done.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
tests/research/: test_adapter_conformance.py
(+4 files in other folders)
