[project]
name = "github-repository-research-tool"
version = "0.1.0"
description = "FastAPI and SQS demo for GitHub repository research"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
	"aiofiles>=24.1.0,<25.0.0",
	"alembic>=1.15.2,<2.0.0",
	"aiobotocore>=2.23.0,<3.0.0",
	"asyncmy>=0.2.10,<0.3.0",
	"asyncpg>=0.30.0,<0.31.0",
	"bcrypt>=4.3.0,<5.0.0",
	"boto3>=1.39.17,<2.0.0",
	"cachetools>=5.5.2,<6.0.0",
	"email-validator>=2.2.0,<3.0.0",
	"fastapi>=0.115.12,<0.116.0",
	"fastapi-pagination>=0.12.34,<0.13.0",
	"greenlet>=3.1.1,<4.0.0",
	"httpx>=0.28.1,<0.29.0",
	"jinja2>=3.1.6,<4.0.0",
	"loguru>=0.7.3,<0.8.0",
	"msgspec>=0.19.0,<0.20.0",
	"moto[sqs]>=5.1.2,<6.0.0",
	"openai>=1.69.0,<2.0.0",
	"passlib>=1.7.4,<2.0.0",
	"pwdlib>=0.3.0",
	"pydantic>=2.11.1,<3.0.0",
	"pydantic-extra-types>=2.10.3,<3.0.0",
	"pydantic-settings>=2.8.1,<3.0.0",
	"python-dotenv>=1.1.0,<2.0.0",
	"python-jose>=3.4.0,<4.0.0",
	"python-multipart>=0.0.20,<0.0.21",
	"redis>=5.2.1,<6.0.0",
	"python-socketio>=5.11.4,<6.0.0",
	"sqlalchemy>=2.0.40,<3.0.0",
	"sqlalchemy-crud-plus>=0.0.2",
	"uvicorn>=0.34.0,<0.35.0",
]

[dependency-groups]
dev = [
	"detect-secrets>=1.5.0,<2.0.0",
	"flask>=3.1.2,<4.0.0",
	"isort>=6.0.1,<7.0.0",
	"moto[server]>=5.1.2,<6.0.0",
	"pre-commit>=4.3.0,<5.0.0",
	"pyink>=24.10.1,<25.0.0",
	"pytest>=8.3.5,<9.0.0",
	"pytest-asyncio>=0.26.0,<0.27.0",
	"pyyaml>=6.0.2,<7.0.0",
	"ruff>=0.11.2,<0.12.0",
]

[tool.uv]
package = false
